# slang

./: .gitignore  README.md  conftest.py  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html  numpy.html
docs/_modules/sklearn/linear_model/: _base.html
docs/_modules/slang/: chunkers.html  core.html  featurizers.html  snip_stats.html  snippers.html  spectrop.html  util.html
docs/_sources/: table_of_contents.rst.txt
docs/_sources/module_docs/slang/: core.rst.txt  snip_stats.rst.txt  snippers.rst.txt  spectrop.rst.txt  stypes.rst.txt  tools.rst.txt
docs/_sources/module_docs/slang/scrap/: scrap_01.rst.txt  the_apis_i_wish_for.rst.txt
docs/module_docs/: slang.html
docs/module_docs/slang/: chunkers.html  core.html  featurizers.html  snip_stats.html  snippers.html  spectrop.html  stypes.html  tools.html  util.html  util_data.html
docs/module_docs/slang/scrap/: learning_pipeline_01.html  scrap_01.html  the_apis_i_wish_for.html
docsrc/: index.rst
docsrc/module_docs/: slang.rst
docsrc/module_docs/slang/: chunkers.rst  featurizers.rst  util.rst  util_data.rst
docsrc/module_docs/slang/scrap/: learning_pipeline_01.rst
misc/: example_slang_train_script.py  last_snipper.error.snipper.pkl  slang reveries.ipynb  synthetic_wfs.pkl
sla/: chunkers.py  core.py  featurizers.py  snip_stats.py  stypes.py  util.py  util_data.py
sla/scrap/: scrap_01.py  the_apis_i_wish_for.py
slang/: __init__.py  chunkers.py  core.py  featurizers.py  settings.py  snip_stats.py  snippers.py  spectrop.py  stores.py  stypes.py  tools.py  util.py  util_data.py  viz.py
slang/scrap/: learning_pipeline_01.py  scrap_01.py  the_apis_i_wish_for.py
slang/tests/: test_spectrop.py
