[metadata]
name = slang
version = 0.1.0
url = https://github.com/otosense/slang
platforms = any
description_file = README.md
description = A structural approach to signal ML
license = mit
root_url = https://github.com/otosense/
author = OtoSense
keywords = 
		sound recognition
		machine learning
		language
		audio
		signal processing
		natural language processing
		NLP
		text mining
copyright = 
		2020
		Otosense

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2store
	numpy
	pandas
	sklearn
	matplotlib
	atypes