[metadata]
version = 0.1.4
description = A structural approach to signal ML
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
		sound recognition
		machine learning
		language
		audio
		signal processing
		natural language processing
		NLP
		text mining
copyright = Otosense 2021
name = slang
display_name = slang
url = https://github.com/otosense/slang
root_url = https://github.com/otosense/
platforms = any


[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2store
	numpy
	pandas
	sklearn
	matplotlib
	atypes


